refactor: adiciona novas class e referencia style.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,21 +19,11 @@
             <p class="country-name">BR</p>
         </header>
         <ul class="weather-list">
-            <li>
-                <h2 class="day">Today</h2>
-                <div class="temperature">
-                    <p class="temperature-number">32</p>
-                    <p class="temperature-unit">ºC</p>
-                </div>
-                <div class="current-weather">
-                    <div class="weather-icon">☀️</div>
-                    <div class="weather-condition">Clear Sky</div>
-                </div>
-            </li>
+
         </ul>
     </main>
     <footer>
-        <p>Made with ❤️ by <a href="#">Darlan Silva</a></p>
+        <p>Made with ❤️ by <a href="https://github.com/DarlanSilv4" target="_blank">Darlan Silva</a></p>
     </footer>
 </body>
 
