refactor: adiciona novos id's

--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 <body>
     <input type="search" class="search-city" id="search-city" placeholder="Type a city name..." />
     <main>
-        <header>
-            <h1 class="city-name">City Name</h1>
-            <p class="country-name">BR</p>
+        <header id="city-info">
+
         </header>
-        <ul class="weather-list">
+        <ul class="weather-list" id="weather-list">
 
         </ul>
     </main>
