feat: configura busca de cidades na api

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <p>Made with ❤️ by <a href="https://github.com/DarlanSilv4" target="_blank">Darlan Silva</a></p>
     </footer>
 </body>
-<script src="./js/index.js"></script>
+<script type="module" src="./js/index.js"></script>
 
 </html>
