refactor: altera nome de funcoes, variaveis e classes css referente a 'weather' para 'forecast'
em todo o codigo o nome weather foi alterado para forecast como correcao de nomeclatura

BREAKING CHANGE: nome de funcoes, variaveis e classes foram alterados

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <header id="city-info">
 
         </header>
-        <ul class="weather-list" id="weather-list">
+        <ul class="forecast-list" id="forecast-list">
 
         </ul>
     </main>
     <footer>
-        <p>Made with ❤️ by <a href="https://github.com/DarlanSilv4" target="_blank">Darlan Silva</a></p>
+        <p>Made with ❤️ by <a href=" https://github.com/DarlanSilv4" target="_blank">Darlan Silva</a></p>
     </footer>
 </body>
 <script type="module" src="./js/index.js"></script>
