feat: adiciona titulo para a forecast list

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <header id="city-info">
 
         </header>
+
+        <h2 class="forecast-title">Forecast</h2>
+
         <ul class="forecast-list" id="forecast-list">
 
         </ul>
