feat: mostra forecast title apenas depois de realizar a busca

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         </header>
 
-        <h2 class="forecast-title">Forecast</h2>
+        <h2 class="forecast-title title-hidden" id="forecast-title">Forecast</h2>
 
         <ul class="forecast-list" id="forecast-list">
 
